--- a/src/Distracey/Distracey.csproj
+++ b/src/Distracey/Distracey.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.1.37.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Collections.Immutable.1.1.37\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity.Design" />
@@ -67,27 +71,33 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="ApmAttribute.cs" />
+    <Compile Include="Helpers\AsyncDiagnosticStack.cs" />
+    <Compile Include="Helpers\AsyncLocal.cs" />
+    <Compile Include="Helpers\AsyncLocalStack.cs" />
+    <Compile Include="IApmContextExtractor.cs" />
+    <Compile Include="MethodHandler\ApmMethodHandlerApmContextExtensions.cs" />
+    <Compile Include="Web\ApmContextHttpMessageExtractor.cs" />
+    <Compile Include="Web\HttpClient\ApmHttpClientApmContextExtensions.cs" />
+    <Compile Include="Web\WebApi\ApmAttribute.cs" />
     <Compile Include="ApmContext.cs" />
-    <Compile Include="ApmContextExtensions.cs" />
     <Compile Include="ApmExtensions.cs" />
-    <Compile Include="ApmHttpClientDelegatingHandlerBase.cs" />
-    <Compile Include="ApmMethodHandlerBase.cs" />
-    <Compile Include="ApmMethodHandlerStartInformation.cs" />
-    <Compile Include="ApmMethodHandlerFinishInformation.cs" />
-    <Compile Include="ApmHttpClientFinishInformation.cs" />
-    <Compile Include="ApmHttpClientStartInformation.cs" />
-    <Compile Include="ApmHttpClientRequestDecorator.cs" />
-    <Compile Include="ApmRequestParser.cs" />
-    <Compile Include="ApmOutgoingResponseDecorator.cs" />
-    <Compile Include="ApmWebApiFilterAttributeBase.cs" />
-    <Compile Include="ApmWebApiFinishInformation.cs" />
-    <Compile Include="ApmWebApiRequestDecorator.cs" />
-    <Compile Include="ApmWebApiStartInformation.cs" />
+    <Compile Include="Web\HttpClient\ApmHttpClientDelegatingHandlerBase.cs" />
+    <Compile Include="MethodHandler\ApmMethodHandlerBase.cs" />
+    <Compile Include="MethodHandler\ApmMethodHandlerStartInformation.cs" />
+    <Compile Include="MethodHandler\ApmMethodHandlerFinishInformation.cs" />
+    <Compile Include="Web\HttpClient\ApmHttpClientFinishInformation.cs" />
+    <Compile Include="Web\HttpClient\ApmHttpClientStartInformation.cs" />
+    <Compile Include="Web\HttpClient\ApmHttpClientRequestDecorator.cs" />
+    <Compile Include="Web\ApmHttpRequestMessageParser.cs" />
+    <Compile Include="Web\WebApi\ApmOutgoingResponseDecorator.cs" />
+    <Compile Include="Web\WebApi\ApmWebApiFilterAttributeBase.cs" />
+    <Compile Include="Web\WebApi\ApmWebApiFinishInformation.cs" />
+    <Compile Include="Web\WebApi\ApmWebApiRequestDecorator.cs" />
+    <Compile Include="Web\WebApi\ApmWebApiStartInformation.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="IApmContext.cs" />
-    <Compile Include="IApmMethodHandlerFactory.cs" />
-    <Compile Include="IApmHttpClientDelegatingHandlerFactory.cs" />
+    <Compile Include="MethodHandler\IApmMethodHandlerFactory.cs" />
+    <Compile Include="Web\HttpClient\IApmHttpClientDelegatingHandlerFactory.cs" />
     <Compile Include="Null\NullApmHttpClientDelegatingHandler.cs" />
     <Compile Include="Null\NullApmHttpClientDelegatingHandlerFactory.cs" />
     <Compile Include="Null\NullApmMethodHandler.cs" />
@@ -111,6 +121,7 @@
   <ItemGroup>
     <Content Include="PerformanceClient.csproj" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
