--- a/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
+++ b/src/Distracey.Agent.SystemWeb/Distracey.Agent.SystemWeb.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Distracey.Agent.SystemWeb</RootNamespace>
     <AssemblyName>Distracey.Agent.SystemWeb</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
