--- a/src/Distracey.Logary/Distracey.Logary.csproj
+++ b/src/Distracey.Logary/Distracey.Logary.csproj
@@ -10,7 +10,7 @@
     <RootNamespace>Distracey.Logary</RootNamespace>
     <AssemblyName>Distracey.Logary</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFrameworkVersion)' == 'v4.5' ">
@@ -31,6 +31,7 @@
     <DefineConstants>DEBUG;TRACE;$(TargetFrameworkConstant)</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,22 +41,39 @@
     <DefineConstants>TRACE;$(TargetFrameworkConstant)</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FSharp.Actor">
-      <HintPath>..\..\packages\FSharp.Actor-logary.3.6.1\lib\net40\FSharp.Actor.dll</HintPath>
+    <Reference Include="FParsec, Version=1.0.0.0, Culture=neutral, PublicKeyToken=40ccfc0a09edbb5d, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\FSharp.Core.3.1.2.5\lib\net40\FSharp.Core.dll</HintPath>
+    <Reference Include="FParsecCS, Version=1.0.0.0, Culture=neutral, PublicKeyToken=40ccfc0a09edbb5d, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Logary, Version=3.6.1.0, Culture=neutral, PublicKeyToken=9adf1a27c1f9599c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Logary.3.6.1\lib\net40\Logary.dll</HintPath>
+    <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FSharp.Core.4.0.0.1\lib\net40\FSharp.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Logary.CSharp, Version=3.6.1.0, Culture=neutral, PublicKeyToken=9adf1a27c1f9599c, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Logary.CSharp.3.6.1\lib\net40\Logary.CSharp.dll</HintPath>
+    <Reference Include="Hopac, Version=0.3.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Hopac.0.3.23\lib\net45\Hopac.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Hopac.Core, Version=0.3.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Hopac.0.3.23\lib\net45\Hopac.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Hopac.Platform, Version=0.3.23.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Hopac.0.3.23\lib\net45\Hopac.Platform.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Logary, Version=4.0.222.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Logary.4.0.222\lib\net452\Logary.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Logary.CSharp, Version=4.0.222.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Logary.CSharp.4.0.222\lib\net452\Logary.CSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
