--- a/src/Distracey.Logary/packages.config
+++ b/src/Distracey.Logary/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="FSharp.Actor-logary" version="3.6.1" targetFramework="net45" />
-  <package id="FSharp.Core" version="3.1.2.5" targetFramework="net45" />
-  <package id="Logary" version="3.6.1" targetFramework="net45" />
-  <package id="Logary.CSharp" version="3.6.1" targetFramework="net45" />
+  <package id="FParsec" version="1.0.2" targetFramework="net45" />
+  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net45" />
+  <package id="Hopac" version="0.3.23" targetFramework="net45" />
+  <package id="Logary" version="4.0.222" targetFramework="net452" />
+  <package id="Logary.CSharp" version="4.0.222" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
